--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </h2>
     <h5>
         <!-- Enlace a la página de la asignatura -->
-        Creado por Nicolás Delgado para la asignatura <a href="http://www.ventanagrafica.co/grafica/index.html" target="_blank" >Gráfica Interactiva</a>.
+        Creado por Nicolás Delgado para la asignatura <a href="http://www.ventanagrafica.co/grafica/index.html" target="_blank" >Gráfica Interactiva</a>. Disponible en <a href="https://nicky10.github.io/" target="_blank" >GitHub</a>
     </h5>
 </body>
 
