--- a/Historia.html
+++ b/Historia.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <html>
 
 <head>
@@ -16,105 +17,132 @@
     <!-- Botón volver al inicio -->
     <p class="volver"><a href="index.html" target="_self"> ← Volver al inicio</a></p>
     <!-- Menú -->
-    <nav class="menunav">
-        <a class="botonMenu" href="Ubicacion.html" target="_self">Ubiación</a>
-        <a class="botonMenu" href="Poblacion.html" target="_self">Población</a>
-        <a class="botonMenu" href="Actividades.html" target="_self">Actividades</a>
-        <a class="botonMenu" href="Historia.html" target="_self">Historia</a>
-        <a class="botonMenu" href="Referencias.html" target="_self">Referencias</a>
-    </nav>
+    <!-- Menú -->
+    <header>
+        <!-- el elemento header incluye el menu desplegable y el ícono que lo despliega -->
+        <input type="checkbox" id="btn-menu"><!-- checkbox permite la opción boleana -->
+        <label for="btn-menu"><img class="imgcheckbox" src="imagenes/menu.png" width="30px"></label>
+        <!-- la imagen del ícono se muestra como label del checkbox pero se oculta cuando no se necesita -->
+        <nav class="menu">
+            <ul>
+                <!-- los botones son elementos de una lista que define el menu pero mantiene el mismo diseño de cada botón, la posición de esta lista depende del estado del checkbox-->
+                <a class="botonMenu" href="Ubicacion.html" target="_self">Ubiación</a>
+                <a class="botonMenu" href="Poblacion.html" target="_self">Población</a>
+                <a class="botonMenu" href="Actividades.html" target="_self">Actividades</a>
+                <a class="botonMenu" href="Historia.html" target="_self">Historia</a>
+                <a class="botonMenu" href="Referencias.html" target="_self">Referencias</a>
+            </ul>
+        </nav>
+    </header>
     <br><br><br>
     <!-- Crear linea de tiempo -->
-    <div class="linea-tiempo">
-        <!-- Añadir momentos a la linea de tiempo -->
-        <div class="momento">
-            <h4>1750</h4>
-            <div class="descripcion">
-                Ocurre el primer asentamiento europeo, protagonizado por un fuerte comercial francés llamado Fort
-                Rouille. Sin embargo,
-                Después de la Guerra de los Siete Años (1756-1763) el control de Canadá pasó a Gran Bretaña.
-            </div>
-        </div>
-        <div class="momento">
-            <h4>1793</h4>
-            <div class="descripcion">
-                El primer gobernador del Alto Canadá, John Graves Simcoe, fundó una nueva ciudad. Llamó a la nueva
-                ciudad York en honor al Duque de York y la convirtió en la capital del Alto Canadá.
-            </div>
-        </div>
-        <div class="momento">
-            <h4>1812 - 1815</h4>
-            <div class="descripcion">
-                Durante la guerra de 1812, los americanos capturaron Toronto y quemaron varios edificios. Sin embargo,
-                los estadounidenses pronto se retiraron.
-                Después de que la guerra terminó en 1815, Toronto creció rápidamente al llegar muchos inmigrantes
-                británicos.
-            </div>
-        </div>
-        <div class="momento">
-            <h4>1827</h4>
-            <div class="descripcion">
-                Se funda la universidad de Toronto.
-            </div>
-        </div>
-        <div class="momento">
-            <h4>1833 - 1834</h4>
-            <div class="descripcion">
-                La primera oficina de correos de su historia abrió en 1833. Luego, en 1834, Toronto fue incorporada como
-                ciudad (su nombre fue cambiado de York a Toronto). La ciudad siguió creciendo rápidamente.
-            </div>
-        </div>
-        <div class="momento">
-            <h4>1850</h4>
-            <div class="descripcion">
-                Se contruye St. Lawrence Hall.
-            </div>
-        </div>
-        <div class="momento">
-            <h4>1851</h4>
-            <div class="descripcion">
-                Toronto era una ciudad floreciente de 30.000 habitantes. Se convirtió en la capital de Ontario. Durante
-                el siglo XIX, la población de Toronto se disparó a medida que los inmigrantes entraban en la ciudad.
-            </div>
-        </div>
-        <div class="momento">
-            <h4>1904 </h4>
-            <div class="descripcion">
-                Toronto sufrió otro incendio grave, uno de los peores de su historia. Comenzó el 19 de abril de 1904 y
-                duró toda la noche, pero afortunadamente nadie fue asesinado. Una vez más, Toronto pronto se recuperó.
-            </div>
-        </div>
-        <div class="momento">
-            <h4>1930's</h4>
-            <div class="descripcion">
-                Toronto sufrió mucho en la depresión de los años 30. Sin embargo, la prosperidad volvió con la Segunda
-                Guerra Mundial. La población de Toronto siguió creciendo.
-            </div>
-        </div>
-        <div class="momento">
-            <h4>1954 - 1965</h4>
-            <div class="descripcion">
-                La primera línea de metro en Toronto abrió sus puertas en 1954. El Centro Comercial Yorkdale abrió sus
-                puertas en 1964 y el Ayuntamiento de Toronto abrió sus puertas en 1965.
-            </div>
-        </div>
-        <div class="momento">
-            <h4>1969 - 1998</h4>
-            <div class="descripcion">
-                El Museo de las Ciencias de Ontario abrió sus puertas en 1969. La Torre CN fue construida en 1975. Eaton
-                Centre abrió sus puertas en 1977 y Roy Thomson Hall en 1982. El Rogers Centre se inauguró en 1989. En
-                1998 varios municipios se fusionaron para formar una sola ciudad, a veces conocida como la megaciudad.
-            </div>
-        </div>
-        <div class="momento">
-            <h4>Actualidad</h4>
-            <div class="descripcion">
-                Hoy en día Toronto es una ciudad floreciente. Toronto es un importante centro financiero. En la
-                población 2018 de Toronto era de 2,8 millones. Toronto es la quinta ciudad más grande de Norteamérica y
-                sigue creciendo constantemente.
-            </div>
-        </div>
+
+    <div class="timeline">
+        <ul>
+            <li>
+                <div class="content">
+                    <h2>1750</h2>
+                    <p class="parrafo">Ocurre el primer asentamiento europeo, protagonizado por un fuerte comercial
+                        francés llamado Fort
+                        Rouille. Sin embargo,
+                        Después de la Guerra de los Siete Años (1756-1763) el control de Canadá pasó a Gran Bretaña.</p>
+                </div>
+            </li>
+            <li>
+                <div class="content">
+                    <h2>1793</h2>
+                    <p class="parrafo">Durante la guerra de 1812, los americanos capturaron Toronto y quemaron varios
+                        edificios. Sin embargo,
+                        los estadounidenses pronto se retiraron.
+                        Después de que la guerra terminó en 1815, Toronto creció rápidamente al llegar muchos
+                        inmigrantes
+                        británicos.</p>
+                </div>
+            </li>
+            <li>
+                <div class="content">
+                    <h2>1812 - 1815</h2>
+                    <p class="parrafo">Durante la guerra de 1812, los americanos capturaron Toronto y quemaron varios
+                        edificios. Sin embargo,
+                        los estadounidenses pronto se retiraron.
+                        Después de que la guerra terminó en 1815, Toronto creció rápidamente al llegar muchos
+                        inmigrantes
+                        británicos.</p>
+                </div>
+            </li>
+
+            <li>
+                <div class="content">
+                    <h2>1827</h2>
+                    <p class="parrafo">Se funda la universidad de Toronto. Una de las más importantes en la historia del
+                        país</p>
+                </div>
+            </li>
+
+            <li>
+                <div class="content">
+                    <h2>1833 - 1834</h2>
+                    <p class="parrafo">La primera oficina de correos de su historia abrió en 1833. Luego, en 1834,
+                        Toronto fue incorporada como
+                        ciudad (su nombre fue cambiado de York a Toronto). La ciudad siguió creciendo rápidamente.</p>
+                </div>
+            </li>
+            <li>
+                <div class="content">
+                    <h2>1850</h2>
+                    <p class="parrafo">Se contruye St. Lawrence Hall. Uno de los sitios turísticos más importantes de la ciudad.</p>
+                </div>
+            </li>
+            <li>
+                <div class="content">
+                    <h2>1851</h2>
+                    <p class="parrafo">Toronto sufrió otro incendio grave, uno de los peores de su historia. Comenzó el 19 de abril de 1904 y
+                        duró toda la noche, pero afortunadamente nadie fue asesinado. Una vez más, Toronto pronto se recuperó.</p>
+                </div>
+            </li>
+            <li>
+                <div class="content">
+                    <h2>1904</h2>
+                    <p class="parrafo">Toronto era una ciudad floreciente de 30.000 habitantes. Se convirtió en la capital de Ontario. Durante
+                        el siglo XIX, la población de Toronto se disparó a medida que los inmigrantes entraban en la ciudad.</p>
+                </div>
+            </li>
+            <li>
+                <div class="content">
+                    <h2>1930's</h2>
+                    <p class="parrafo">Toronto sufrió mucho en la depresión de los años 30. Sin embargo, la prosperidad volvió con la Segunda
+                        Guerra Mundial. La población de Toronto siguió creciendo.</p>
+                </div>
+            </li>
+            <li>
+                <div class="content">
+                    <h2>1954 - 1965</h2>
+                    <p class="parrafo">La primera línea de metro en Toronto abrió sus puertas en 1954. El Centro Comercial Yorkdale abrió sus
+                        puertas en 1964 y el Ayuntamiento de Toronto abrió sus puertas en 1965.</p>
+                </div>
+            </li>
+            <li>
+                <div class="content">
+                    <h2>1969 - 1998</h2>
+                    <p class="parrafo">El Museo de las Ciencias de Ontario abrió sus puertas en 1969. La Torre CN fue construida en 1975. Eaton
+                        Centre abrió sus puertas en 1977 y Roy Thomson Hall en 1982. El Rogers Centre se inauguró en 1989. En
+                        1998 varios municipios se fusionaron para formar una sola ciudad, a veces conocida como la megaciudad.</p>
+                </div>
+            </li>
+            <li>
+                <div class="content">
+                    <h2>Actualidad</h2>
+                    <p class="parrafo">Hoy en día Toronto es una ciudad floreciente. Toronto es un importante centro financiero. En la
+                        población 2018 de Toronto era de 2,8 millones. Toronto es la quinta ciudad más grande de Norteamérica y
+                        sigue creciendo constantemente.</p>
+                </div>
+            </li>
+
+            <div style="clear: both"></div>
+        </ul>
     </div>
+
+
 </body>
 </body>
 
