--- a/Ubicacion.html
+++ b/Ubicacion.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <html>
 
 <head>
@@ -17,19 +18,28 @@
     <!-- Botón volver al inicio -->
     <p class="volver"><a href="index.html" target="_self"> ← Volver al inicio</a></p>
     <!-- Menú -->
-    <nav class="menunav">
-        <a class="botonMenu" href="Ubicacion.html" target="_self">Ubicación</a>
-        <a class="botonMenu" href="Poblacion.html" target="_self">Población</a>
-        <a class="botonMenu" href="Actividades.html" target="_self">Actividades</a>
-        <a class="botonMenu" href="Historia.html" target="_self">Historia</a>
-        <a class="botonMenu" href="Referencias.html" target="_self">Referencias</a>
-        <br><br>
-    </nav>
+     <!-- Menú -->
+     <header>
+        <!-- el elemento header incluye el menu desplegable y el ícono que lo despliega -->
+        <input type="checkbox" id="btn-menu"><!-- checkbox permite la opción boleana -->
+        <label for="btn-menu"><img class="imgcheckbox" src="imagenes/menu.png" width="30px"></label>
+        <!-- la imagen del ícono se muestra como label del checkbox pero se oculta cuando no se necesita -->
+        <nav class="menu">
+            <ul>
+                <!-- los botones son elementos de una lista que define el menu pero mantiene el mismo diseño de cada botón, la posición de esta lista depende del estado del checkbox-->
+                <a class="botonMenu" href="Ubicacion.html" target="_self">Ubiación</a>
+                <a class="botonMenu" href="Poblacion.html" target="_self">Población</a>
+                <a class="botonMenu" href="Actividades.html" target="_self">Actividades</a>
+                <a class="botonMenu" href="Historia.html" target="_self">Historia</a>
+                <a class="botonMenu" href="Referencias.html" target="_self">Referencias</a>
+            </ul>
+        </nav>
+    </header>
     <!-- Dividir la pantalla en dos secciones -->
     <section id="pantalla-dividida">
         <!-- Parte izquierda -->
         <div class="izquierda">
-            <p class="parrafo_izquierda"><b>Toronto es la capital de la provincia de Ontario</b>, es una ciudad del
+            <p class="parrafo"><b>Toronto es la capital de la provincia de Ontario</b>, es una ciudad del
                 sureste de
                 Canadá, situada en la zona meridional de la misma a orillas del lago Ontario y en la desembocadura de
                 los ríos Humber y Don<a id="Ref1" href="Referencias.html#Ref1_"><sup>[1]</sup></a>.
@@ -45,7 +55,7 @@
         <!-- Parte derecha -->
         <div class="derecha">
             <br><br>
-            <img id="Mapa" src="imagenes/mapa.JPG" width="600px">
+            <img id="Mapa" class="image" src="imagenes/mapa.JPG" width="600px">
             <p class="texto_figura"><a href="Referencias.html#Mapa_" target="_self">Mapa de Toronto</a></p>
         </div>
     </section>
