--- a/Referencias.html
+++ b/Referencias.html
@@ -34,10 +34,11 @@
             </ul>
         </nav>
     </header>
-    <h3>Referencias (navegación)</h3>
+    <h3 style="font-size:3vw;">Referencias (navegación)</h3>
+    <br>
     <!-- Lista de Referencias con navegación -->
     <!-- Se crean enlaces entre la misma página (distintos documentos) y páginas externas -->
-    <ul type=”A” class="parrafo">
+    <ul type=”A” class="parrafo_ref" style="font-size:2vw;">
         <li><b><a href="Ubicacion.html#Mapa">Mapa de Toronto</a></b>, tomado de <a id="Mapa_"
                 href="https://www.google.com/maps/place/Toronto,+Ontario,+Canad%C3%A1/@43.717899,-79.6582408,10z/data=!3m1!4b1!4m5!3m4!1s0x89d4cb90d7c63ba5:0x323555502ab4c477!8m2!3d43.653226!4d-79.3831843"
                 target="_blank">Google Maps</a>.
