--- a/Referencias.html
+++ b/Referencias.html
@@ -43,6 +43,8 @@
                 href="https://www.google.com/maps/place/Toronto,+Ontario,+Canad%C3%A1/@43.717899,-79.6582408,10z/data=!3m1!4b1!4m5!3m4!1s0x89d4cb90d7c63ba5:0x323555502ab4c477!8m2!3d43.653226!4d-79.3831843"
                 target="_blank">Google Maps</a>.
         </li>
+        <li><a href="Historia.html" target="_self"><b>Historia de Toronto</b></a>, tomado de <a id="Historia_"
+            href="https://quehistoria.com/america/canada/toronto/" target="_blank">Qué Historia</a></li>
         <li><b><a id="Ref1_" href="Ubicacion.html#Ref1">[1]</a></b> Tomado de <a
                 href="https://www.ecured.cu/EcuRed:Enciclopedia_cubana" target="_blank">EcuRed</a>. Disponible online en
             <a href="https://www.ecured.cu/Toronto_(Canad%C3%A1)"
@@ -113,9 +115,8 @@
                     target="_blank">GetYourGuide</a>
             </li>
         </ul>
-        <li><a href="Historia.html" target="_self"><b>Historia de Toronto</b></a>, tomado de <a id="Historia_"
-                href="https://quehistoria.com/america/canada/toronto/" target="_blank">Qué Historia</a></li>
     </ul>
+    <img class="imagen" src="imagenes/Mapa_Nav.jpg"   width="80%">
 </body>
 
 </html>
