--- a/Referencias.html
+++ b/Referencias.html
@@ -27,6 +27,7 @@
             <ul>
                 <!-- los botones son elementos de una lista que define el menu pero mantiene el mismo diseño de cada botón, la posición de esta lista depende del estado del checkbox-->
                 <a class="botonMenu" href="Ubicacion.html" target="_self">Ubiación</a>
+                <a class="botonMenu" href="Mapa.html" target="_self">Mapa Interactivo</a>
                 <a class="botonMenu" href="Poblacion.html" target="_self">Población</a>
                 <a class="botonMenu" href="Actividades.html" target="_self">Actividades</a>
                 <a class="botonMenu" href="Historia.html" target="_self">Historia</a>
