--- a/Mapa.html
+++ b/Mapa.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta lang="es">
-    <script src="js/navmap.js"></script>
+    <script src="js/mapa_.js"></script>
     <title>Toronto</title>
     <link href="estilos.css" rel="stylesheet" type="text/css">
     <!-- Importar las fuentes de Google -->
